<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Signal Monitor</string>
    <string name="s1_tag">R1: </string>
    <string name="s2_tag">R2: </string>
    <string name="s3_tag">R3: </string>
    <string name="s4_tag">R4: </string>
    <string name="s5_tag">R5: </string>

    <string name="s1_button">Ver mas</string>
    <string name="s2_button">Ver mas</string>
    <string name="s3_button">Ver mas</string>
    <string name="s4_button">Ver mas</string>
    <string name="s5_button">Ver mas</string>

    <string name="graph_title">Gráfica sensor</string>

    <string name="blue_button">Buscar</string>

    <string name="error_connect_failed">ERROR CONNECT FAILED</string>
    <string name="error_connect_lost">ERROR CONNECT LOST</string>

    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting&#8230;</string>
    <string name="title_connected_to">Conectado a <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">No conectado</string>

    <!--  DeviceListActivity -->
    <string name="scanning">Buscando&#8230;</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
    <string name="bt_disconnect">Disconnect</string>
    <string name="bt_getFile">Descargar Datos</string>
    <string name="default_res">1</string>
    <string name="v1_tag">V1:</string>
    <string name="v2_tag">V2:</string>
    <string name="v3_tag">V3:</string>
    <string name="v4_tag">V4:</string>
    <string name="v5_tag">V5:</string>
    <string name="invalid_task">BT: communication error</string>
    <string name="bt_unavailable">Bluetooth no conectado</string>
    <string name="btn_default">default</string>
    <string name="bt_enableRT">MONITOREAR</string>
    <string name="bt_disableRT">PARAR</string>
    <string name="bt_getRs">ACTUALIZAR</string>
    <string name="bt_setRs">MODIFICAR</string>
    <string name="RsUpdated">Valores actuales</string>
    <string name="RsChanged">Valores modificados!</string>
    <string name="file_saved">Archivo guardado!</string>
    <string name="rata">Periodo:</string>
    <string name="seg">seg.</string>
    <string name="empty_fields">Campos vacíos!</string>
    <string name="file_error">SD file error!</string>
    <string name="bt_rmData">BORRAR DATOS</string>
    <string name="dataErased">DATOS ELIMINADOS!!!</string>
    <string name="noPermissions">Permisos no concedidos. Bye!</string>
    <string name="btFailed">No emparejamos :/</string>


</resources>
